@@ -4,6 +4,9 @@ Traits UI Changelog
 What's new in TraitsUI 4.5.0
 ----------------------------
 
+Fixes
+
+ * Qt CodeEditor now honors 'show_line_numbers' and the 'readonly' style (#137)
 
 
 Release 4.4.0
